kubernetes/apps/default/forgejo/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo-https
  namespace: default
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - code.${SECRET_DOMAIN}
  rules:
    - backendRefs:
      - name: forgejo-http
        port: 3000
---
# NOTE: anything on port network/envoy-internal.{port} will be routed here
# There is no "hostname" option for tcp routes
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: forgejo-ssh
  namespace: default
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: git-ssh
  rules:
    - backendRefs:
      - name: forgejo-ssh
        port: 22
